--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 										Specialized in building in quality websites
 										and applications.</p>
 								</header>
-								<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
+								<a href="#" class="image main"><img src="images/pic001.png" alt="" /></a>
 								<ul class="actions special">
 									<li><a href="" class="button large">My Work</a></li>
 								</ul>
