--- a/index.html
+++ b/index.html
@@ -57,17 +57,16 @@
 									<h2><a href="#">MySelf<br />
 									</a></h2>
 									<p>I am Software engineer based in Chennai (India),
-										Specialized in building in quality websites
-										and applications.</p>
+										i like to build websites , webapps, mobile apps, anything related to software. </p>
 								</header>
 								<a href="" class="image main"><img src="images/pic001.png" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="" class="button large">My Work</a></li>
+									<li><a href="#posts" class="button large">My Work</a></li>
 								</ul>
 							</article>
 
 						<!-- Posts -->
-							<section class="posts">
+							<section class="posts" id="posts">
 								<!-- <article>
 									<header>
 										<h2><a href="#">Flutter <br />
@@ -82,24 +81,24 @@
 								<article>
 									<header>
 										<h2><a href="#">Flutter<br />
-										Spotify Clone with API Data</a></h2>
+										Catalouge App For B2B Business </a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="https://play.google.com/store/apps/details?id=com.app.catalouge" target="_blank" class="image fit"><img src="images/catalouge.png" alt="" /></a>
+									<p> This is the App where the wholesaler can show their products and can receive the order for the same.  </p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Source Code</a></li>
+										<li><a href="https://play.google.com/store/apps/details?id=com.app.catalouge" target="_blank" class="button">Live App</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
 										<!-- <span class="date">April 18, 2017</span> -->
 										<h2><a href="#">Flutter<br />
-										Ecommerce App</a></h2>
+										Homely Fresh Food</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="#" class="image fit"><img src="images/HFF_Logo.png" alt="" /></a>
+									<p>  This is a Food Delivery App for delivery person where user will be assigned orders and can navigate to delivery address.   </p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Source Code</a></li>
+										<li><a href="#" class="button disabled">Source Code</a></li>
 									</ul>
 								</article>
 								<!-- <article>
@@ -116,20 +115,20 @@
 								<article>
 									<header>
 										<!-- <span class="date">April 11, 2017</span> -->
-										<h2><a href="#">Website (FrontEnd)<br />
-										Instagram Clone</a></h2>
+										<h2><a href="#">Website<br />
+									  SAS</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="#" class="image fit"><img src="images/sas.PNG" alt="" /></a>
+									<p> This is a static website for a comapany which provide cleaning service. </p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Source Code</a></li>
+										<li><a href="#" class="button disabled ">Source Code</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
 										<!-- <span class="date">April 7, 2017</span> -->
-										<h2><a href="#">Website (FrontEnd)<br />
-										Amazon Clone</a></h2>
+										<h2><a href="#">Flutter <br />
+									Chat (complete) App   </a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
 									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
@@ -152,7 +151,7 @@
 									<header>
 										<!-- <span class="date">April 7, 2017</span> -->
 										<h2><a href="#">WebApp (Mern)<br />
-										Amazon Clone</a></h2>
+										ECommerce</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
 									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
@@ -186,8 +185,11 @@
 							</section>
 
 						<!-- Footer -->
-							<!-- <footer>
-								<div class="pagination">
+							<footer>
+								<p> These are some of the projects on which i have worked on, i cannot show some of them due to NDA's , <br> 
+								but if you any oportuninty for me then ping me, <br> we will crush it.
+								</p>
+								<!-- <div class="pagination">
 									<a href="#" class="page active">1</a>
 									<a href="#" class="page">2</a>
 									<a href="#" class="page">3</a>
@@ -196,8 +198,8 @@
 									<a href="#" class="page">9</a>
 									<a href="#" class="page">10</a>
 									<a href="#" class="next">Next</a>
-								</div>
-							</footer> -->
+								</div> -->
+							</footer>
 
 					</div>
 
