--- a/index.html
+++ b/index.html
@@ -130,10 +130,10 @@
 										<h2><a href="#">Flutter <br />
 									Chat (complete) App   </a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="#" class="image fit"><img src="images/chatapp.png" alt="" /></a>
+									<p> This is the Chat app created in flutter with firebase </p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Source Code</a></li>
+										<li><a href="https://github.com/Madanraj1/chatApp-Youtube-SourceCode" target="_blank" class="button">Source Code</a></li>
 									</ul>
 								</article>
 								<!-- <article>
